# rankoder

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  devenv.nix  devenv.yaml  flake.nix  plan.md  secretspec.toml
.sqlx/: query-001092d6bbacff03f1b8f8e928c632135995663252978de249fad4cf5630462b.json  query-024f7eb73a008c44a0a8783880bc14176212532187d318493f359700dd09a9f2.json  query-0319ef6ad86bba9b26f3b242e3b1737884951a10a35ab5b1ce2be023debcf9dc.json  query-116efdb62d53180276c2722f00be02398c9fd082e8b3acc6c4cb8bd02628cfed.json  query-14138b1d2053a09f433056eaf1035e6aedfa2ded5a3950c1087d417949fd2d02.json  query-1c17626ae51da010467bf902768b4459740917ce373be6007037d50837e01b75.json  query-1ec5331f71e4ace10918bc16a295c05560adca8e46a0fc217b5a788b6c39f14b.json  query-27da3528d2efeb28715951a86249d7c156b11ca57ac99aa149f729f89d3c3654.json  query-2af76af3b478d586c54524b12b8d6cebce4eda14f278e02641f9a6eadd6aa5e3.json  query-2c2e8101acffcea175b4862295c2e285da659245302b57ea8cebaebe8b1d7c4a.json  query-2caa4a57c3ff802b529367185c6c34753118f74e0bb8b05381aee0cd6b0193d1.json  query-30ae7104017188ad26151544dcda8763691c8bc4ee8a62aac576b37c1bec65e9.json  query-3136a92837c5618f829c7668c34e7ebacc5853674d6db285e3cf17ac610aa892.json  query-315537fc1f8cd124be77dfb2c9e30eab8b2c82c0810bb2be85209459a5fdc4ba.json  query-3157e4389701690852b112edd498ea820ce677038e91b78e74c46bb60bb8509e.json  query-317e513001424932a3390f0b66eaaae81133f8e70bd5169bccf336ba0b38bded.json  query-382d8365d639f21bafb6cca76d74d27b0924e3ee7847986ca4f5ddabf9073a92.json  (+83 more)
migrations/: 1_init.sql  2_transcode.sql  (+3 more)
(+67 files in other folders)
