[package]
name = "rankoder"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "migrate", "json", "time", "uuid"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "query"] }
time = "0.3"
anyhow = "1.0.102"
futures = "0.3"
thiserror = "2"
uuid = {version = "1", features = ["v7", "fast-rng", "serde"]}
tracing = { version = "0.1", features = ["attributes"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio-util = { version = "0.7.18", features = ["rt"] }
rumqttc = "0.25"
serde_with = "3.20"
